<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color12"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/color22"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:text="@string/send_message" />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/color16"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:text="@string/without_saving_a_number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_service"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/whatsApp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/telegram"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/telegram"
        android:textAllCaps="false" />


</LinearLayout>